# bcb-modal

./: .gitignore  README.md  pyproject.toml  request_example.py  request_to_modal.py  requirements.txt  run_bcb_gold.py
app/: server.py
