[project]
name = "bcb-modal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.0.1",
    "modal>=0.64.192",
    "pytest-json-report>=1.5.0",
    "pytest>=8.3.3",
    "requests>=2.32.3",
    "ruff>=0.7.0",
    "tqdm>=4.66.5",
]
